# Wiki-Agent-Harness

./: .gitignore  README.md  pyproject.toml  requirements.txt
tests/: test_smoke.py
wiki_agent_harness/: __init__.py  __main__.py  access.py  cli.py  components.py  enrich.py  helpers.py  index.py  ingest.py  main.py  ops.py  pages.py  prompts.py  renderer.py  slots.py  store.py
wiki_agent_harness/agentics/: __init__.py
wiki_agent_harness/agentics/wiki_agent/: SKILL.md  __init__.py
wiki_agent_harness/templates/: _macros.html.j2  base.html.j2  comparison.html.j2  concept.html.j2  dashboard.html.j2  diagram.html.j2  entity.html.j2  folder.html.j2  landing.html.j2  note.html.j2  procedure.html.j2  source.html.j2  timeline.html.j2
