[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wiki-agent-harness"
version = "0.1.0"
description = "Obsidian-style wiki subsystem for AI agents — portable, git-tracked, wikilink-aware"
requires-python = ">=3.11"
dependencies = []   # pure stdlib only

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["wiki_agent_harness*"]
