[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wiki-agent-harness"
version = "0.2.0"
description = "HTML-first, template-driven wiki subsystem for AI agents — agents fill slots, never write HTML by hand"
requires-python = ">=3.11"
dependencies = [
    "Jinja2>=3.1",
    "PyYAML>=6.0",
]

[project.scripts]
wah = "wiki_agent_harness.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["wiki_agent_harness*"]

[tool.setuptools.package-data]
wiki_agent_harness = ["templates/*.html.j2", "templates/**/*.html.j2"]
